--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ entrypoints==0.3
 Flask==2.0.2
 Flask-Caching==1.10.1
 Flask-Compress==1.10.1
+gunicorn==20.1.0
 hijri-converter==2.2.2
 holidays==0.12
 idna==3.3
