--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-lttbc==0.1.9
 ansi2html==1.6.0
 backcall==0.2.0
 Brotli==1.0.9
@@ -37,6 +36,7 @@ jupyter-client==7.1.2
 jupyter-core==4.9.1
 jupyter-dash==0.4.0
 korean-lunar-calendar==0.2.1
+lttbc==0.2.0
 MarkupSafe==2.0.1
 matplotlib-inline==0.1.3
 more-itertools==8.12.0
@@ -51,6 +51,9 @@ plotly-resampler==0.2.4
 prompt-toolkit==3.0.24
 Pygments==2.11.2
 PyMeeus==0.5.11
+python-dateutil==2.8.2
+pytz==2021.3
+pywin32==303
 pyzmq==22.3.0
 requests==2.27.1
 retrying==1.3.3
